--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.7",
+    "@mui/styled-engine": "^6.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
