--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.0",
     "@mantine/core": "^7.14.0",
     "@mantine/hooks": "^7.14.0",
