--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/styled-engine": "^6.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^19.0.0",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
